snipeit/resources/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: snipeit
  labels:
    app: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: redis
          image: redis:8-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: tcp
              protocol: TCP
          volumeMounts:
            - name: redis-data
              mountPath: /data
          command: ["redis-server", "--protected-mode no", "--save 60 1", "--loglevel warning"]
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 2
              memory: 1Gi
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: snipeit-redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: snipeit
spec:
  selector:
    app: redis
  ports:
    - name: tcp
      port: 6379
      protocol: TCP
      targetPort: 6379
