snipeit/resources/snipeit-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snipeit
  namespace: snipeit
  labels:
    app: snipeit
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: snipeit
  template:
    metadata:
      labels:
        app: snipeit
    spec:
      containers:
        - name: snipeit
          image: snipe/snipe-it:v8.7.2-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: snipeit-data
              mountPath: /var/lib/snipeit
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 4
              memory: 2Gi
      volumes:
        - name: snipeit-data
          persistentVolumeClaim:
            claimName: snipeit-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: snipeit-http
  namespace: snipeit
spec:
  selector:
    app: snipeit
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
